# dochub

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml
doc_hub/: ingestor_util.py  llm_util.py
frontend/: pyproject.toml
frontend/frontend/: app.py  query_utils.py
ingestor/: pyproject.toml
ingestor/ingestor/: ingest.py
