[tool.poetry]
name = "doc-hub"
version = "0.1.0"
description = ""
authors = ["Rajat Nigam <rajatnigam89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,>=3.11,<3.12"
streamlit = "^1.33.0"
black = "^24.4.0"
langchain = "^0.1.16"
tqdm = "^4.66.2"
unstructured = "0.7.12"
pytesseract = "^0.3.10"
poppler-utils = "^0.1.0"
pdf2image = "^1.17.0"
pypdf = "^4.2.0"
langchain-pinecone = "^0.1.0"
langchain-openai = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingest = "doc_hub.ingestor_util:execute"
query = "doc_hub.llm_util:main"

